# OpenSteamTool2

./: README.md  build.bat
.github/workflows/: main.yml
src/: ByteSearch.cpp  ByteSearch.h  CMakeLists.txt  HookManager.cpp  HookManager.h  LuaConfig.cpp  LuaConfig.h  dllmain.cpp  dllmain.h  steam.h
src/Hook/: Hooks_IPC.cpp  Hooks_Misc.cpp  Hooks_NetPacket.cpp
src/Utils/: AppTicket.cpp  AppTicket.h
src/cmake/: FetchCache.cmake
